--- a/style.css
+++ b/style.css
@@ -62,24 +62,49 @@ nav h2 {
    
 }
 .banner-container {
-    border: 2px solid teal;
+    max-width: 900px;
+    border: 2px solid rgb(128, 98, 0);
     
-    margin : 121px 760px;
+    /* margin : 121px 760px; */
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    
-    align-items: center;
+}
 
+.circle-container {
+
+    /* position: relative; */
+    /* width: 400px; */
+    border: 1px solid firebrick;
 }
-.banner-container-image {
-    height: 400px;
-    width : 400px;
-    background-image: url("./assets/microphone.png");
-    background-repeat: no-repeat;
-    /* display : none */
+
+.circle {
+    margin: 121px 240px;
+    width: 47%;
+  
+}
+
+.mic {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 116px;
+  height: 175px;
+  transform: translate(-50%, -50%);
+  
+}
+.banner-information , .white {
+    margin-top: 10px;
+    text-align: center;
+}
+.banner-information-button {
     
+    margin-top: 10px;
+    text-align: center;
+    align-items: center;
     
 }
+
 
 
 /* Template's that can be used in various places */
