--- a/style.css
+++ b/style.css
@@ -56,17 +56,13 @@ nav h2 {
     background-size: cover;
     background-repeat: no-repeat;
     height: 760px;  
-    border: 2px solid teal;
-    /* align-items: center; */
+    border: 1px solid var(--header-bg-color);
+    
     
    
 }
 .banner-container {
     max-width: 550px;
-    border: 2px solid rgb(128, 98, 0);
-
-    
-    
     margin: 112px auto;
     display: flex;
     flex-direction: column;
@@ -77,7 +73,7 @@ nav h2 {
 
     position: relative;
     
-    border: 5px solid firebrick;
+    
     
 }
 
@@ -124,7 +120,7 @@ nav h2 {
     background-color: var(--header-bg-color);
 }
 .podcast-container {
-    border: 1px solid rgb(246, 250, 5);
+    border: 1px solid var(--header-bg-color);
     text-align: center;
     max-width: 1200px;
     margin: 0 auto;
@@ -147,7 +143,7 @@ nav h2 {
     opacity: 0.8;
 }
 .podcast-information-cards {
-    border: 1px solid teal;
+    
     display: flex;
     justify-content: space-evenly;
 }
@@ -172,9 +168,105 @@ nav h2 {
 /* Section - Why Choose Techwave  */
 
 #why-choose-techwave {
-    border: 4px solid teal;
+    border: 1px solid var(--header-bg-color);
+    background-color: var(--header-bg-color);
 
 }
+.premuim-audio-quality {
+    grid-area: premium;
+    padding: 90px 40px;
+    background-color: #3d137465 ;
+    border-radius: 30px;
+   
+}
+
+
+
+.mobile-friendly {
+    
+    grid-area: mobile;
+}
+.global-community {
+    grid-area: global;
+}
+.exclusive-interviews {
+    grid-area: exclusive;
+}
+
+.rich-resources {
+    grid-area : rich ;
+}
+
+
+.techwave-container h1 {
+    
+    
+    margin-bottom: 40px;  
+    margin-top:80px;
+    text-align: center;
+    color: white;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 58px;
+    font-style: bold;
+}
+
+.techwave-grid-container {
+    
+    max-width: 1200px;
+    margin : 0 auto;
+
+    display: grid;
+    gap: 30px;
+    grid-template-columns: 1.5fr 1fr 1fr 1.8fr;  
+    grid-template-rows: auto auto auto;      
+   
+    grid-template-areas: 
+    "premium mobile mobile mobile"
+    "premium global global global"
+    "exclusive exclusive exclusive rich"
+    
+
+     
+
+/* shortcut for techwave container styling */  
+}
+.white1 {
+    color: aliceblue;
+}
+.border {
+    background-color: #3d137465 ;
+   
+    
+    border-radius: 30px;
+    
+    padding: 40px;
+    
+}
+.techwave-font {
+    margin-top: 16px;
+    font-size: 24px;
+    font-weight: 700;
+    font-style: bold;
+    line-height: 29px;
+    text-align: left;
+    margin-bottom: 16px;
+}
+.techwave-p {
+    opacity :0.6;
+    margin-top: 16px;
+    font-size: 16px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 24px;
+    text-align: left;
+    margin-bottom: 16px;
+}
+
+
+
+
+
 
 
 
