--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ nav h2 {
   gap: 20px;
 }
 .episode-card {
-  background-color: #652dad65;
+  background-color: #3d137465;
   border-radius: 20px;
   width: 100%;
   max-width: 380px;
@@ -308,6 +308,51 @@ nav h2 {
   padding-bottom: 40px;
   text-align: center;
 }
+.host {
+  padding-top: 120px;
+  padding-bottom: 40px;
+
+  text-align: center;
+  color: white;
+  font-size: 48px;
+}
+.host-container {
+  background-color: #3d137465;
+  border-radius: 40px;
+  width: 1200px;
+  height: 280px;
+  align-items: center;
+
+  display: flex;
+  justify-content: space-around;
+  gap: 40px;
+}
+.host-information h3 {
+  font-size: 32px;
+  font-weight: 700;
+  font-style: bold;
+}
+.host-container {
+  padding: 40px;
+}
+
+.host-information p {
+  padding-top: 20px;
+  font-size: 16px;
+  font-weight: 400;
+  opacity: 0.6;
+  line-height: 24px;
+}
+.host-social {
+  padding-top: 20px;
+}
+.social-image {
+  border: 1px solid teal;
+}
+/* .host-social img { */
+/*   height: 20px; */
+/*   width: 20px; */
+/* } */
 
 /* Template's that can be used in various places */
 
