--- a/style.css
+++ b/style.css
@@ -526,7 +526,7 @@ html {
         display: none;
     }
 
-    nav {}
+
 
     #banner {
         background-position: center;
@@ -597,13 +597,15 @@ html {
     }
 
     .host-container {
+        position: relative;
         display: flex;
         flex-direction: column;
         height: auto;
-
+        margin: 20px;
     }
 
     .host-information {
+
         text-align: center;
     }
 
@@ -613,10 +615,60 @@ html {
         margin: 0 auto;
     }
 
-    .footer-container {
-        max-width: 440px;
-        margin: 0 auto;
+    /* Footer Section */
+    #footer-banner {
 
+        max-width: 400px;
+
+
+
+
+        background-image: url("./assets/hero-cover-mobile.png");
+        background-position: center;
+        background-size: contain;
+    }
+
+    .footer-container {
+        max-width: 200px;
+
+        margin: 0 auto;
+    }
+
+    .techwave-footer {
+
+        width: 200px;
+    }
+
+    .footer-social img {
+        height: 15px;
+        width: 15px;
+    }
+
+    .footer-social {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        gap: 80px;
+        max-width: 100px;
+
+    }
+
+    #footer-banner {
+        padding: 40px 15px;
+    }
+
+    .footer-container {
+        gap: 25px;
+    }
+
+    .footer-container img {
+        max-width: 200px;
+    }
+
+    .footer-social {
+        gap: 15px;
+        justify-content: center;
+        margin: 15px auto;
     }
 
 
@@ -627,8 +679,22 @@ html {
 
 
 
+    .footer-links {
+        gap: 8px;
+    }
 
+    .footer-links img {
+        width: 12px;
+        height: 12px;
+    }
 
+    .footer-container a {
+        font-size: 13px;
+    }
+
+    .footer-copyright p {
+        font-size: 13px;
+    }
 
 
     .circle {
@@ -641,11 +707,6 @@ html {
 
         margin: 0 auto;
     }
-
-
-
-
-
 
     .mic {
         top: 65%;
